# rag-llm-education

./: .gitignore  Makefile  README.md  api.py  app.py  config.py  pyproject.toml  render.yaml  requirements.txt
notebooks/: output.md  rag_chatbot.ipynb
prompts/: rag_prompt.json
rag_llm/: __init__.py  dataset.py  features.py  plots.py
rag_llm/modeling/: predict.py  train.py
src/: api.py  store_data_to_chroma.py
src/utils/: chatbot_utils.py  model_utils.py  upload_modules_utils.py
streamlit/: app.py
