[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rag_llm"
version = "0.0.1"
description = "Proyek ini bertujuan mengembangkan chatbot edukasi berbasis LLM dengan pendekatan Retrieval-Augmented Generation (RAG). Chatbot dirancang untuk membantu dosen maupun siswa dalam proses pembelajaran dengan cara menjawab pertanyaan secara kontekstual berdasarkan modul ajar yang diunggah dalam bentuk PDF. Sistem ini memadukan kemampuan LLM dalam memahami bahasa alami dengan mekanisme pencarian dokumen untuk memastikan jawaban yang diberikan akurat, relevan, dan sesuai dengan materi pembelajaran."
authors = [
  { name = "aziz" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["rag_llm"]
force_sort_within_sections = true


